# c-skel

./: .gitignore  CMakeLists.txt  README  prepare_repo.sh
.github/workflows/: test.yml
debian/: copyright
src/: CMakeLists.txt  fibo.c
test/: CMakeLists.txt  fibo.py  t0000-basic.sh  t1000-fibo.sh  test-lib.sh
