PROJECT(c-skel C)

# States that CMake required version must be >= 2.6
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules)

INCLUDE(FindDebArch)

SET(CPACK_SOURCE_GENERATOR "TGZ")
SET(CPACK_GENERATOR "TGZ;DEB")
SET(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/README")
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE")
SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CPACK_RESOURCE_FILE_README}")
SET(CPACK_PACKAGE_VERSION_MAJOR "0")
SET(CPACK_PACKAGE_VERSION_MINOR "1")
SET(CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}")
SET(CPACK_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${CPACK_PACKAGE_VERSION}_${CPACK_DEBIAN_PACKAGE_ARCHITECTURE}")
SET(CPACK_SOURCE_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${CPACK_PACKAGE_VERSION}_orig")
SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6")
SET(CPACK_PACKAGE_VENDOR "Emmanuel Roullit")
SET(CPACK_PACKAGE_CONTACT "${CPACK_PACKAGE_VENDOR} <emmanuel.roullit@gmail.com>")
SET(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_SOURCE_DIR}/debian/postinst;${CMAKE_SOURCE_DIR}/debian/shlibs")
SET(CPACK_DEBIAN_PACKAGE_DESCRIPTION "C project skeleton")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "C project skeleton.")
SET(CPACK_PACKAGE_DESCRIPTION "The C project skeleton is here to get your application a good start.")
SET(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
SET(CPACK_DEBIAN_PACKAGE_SECTION "devel") #e.g net, kde, java, games
SET(CPACK_STRIP_FILES ON)
set(CPACK_SOURCE_IGNORE_FILES "/build/;/.git/;/.gitignore;/*.swp;~$;${CPACK_SOURCE_IGNORE_FILES}")

INCLUDE(CPack)

#SET(CMAKE_C_FLAGS_RELEASE "")

ADD_DEFINITIONS(
	-W
	-Wextra
	-Wall
	-Werror
	-std=gnu99
	-O2
	-D_REENTRANT
	-D_FORTIFY_SOURCE=2
	-D_FILE_OFFSET_BITS=64
	-fstack-protector
)

# GCC Compiler only compiler flags
IF(CMAKE_C_COMPILER_ID STREQUAL GNU)
	ADD_DEFINITIONS(
		-pedantic
		-pedantic-errors
		-z relo
		-pie
	)
ENDIF(CMAKE_C_COMPILER_ID STREQUAL GNU)

IF (CMAKE_BUILD_TYPE STREQUAL profile)
	ADD_DEFINITIONS(-g -pg)
ENDIF (CMAKE_BUILD_TYPE STREQUAL profile)

ENABLE_TESTING()

SET(PATH_TO_EXEC "${CMAKE_BINARY_DIR}/src")

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)

# HACK to generate complete deb package
INSTALL(FILES debian/copyright debian/changelog.gz DESTINATION share/doc/${PROJECT_NAME})
