FIND_PACKAGE(Doxygen)
INCLUDE(Pod2Man)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

# Generate doxygen documentation on 'doc' target
IF(DOXYGEN_FOUND)
	CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)
	ADD_CUSTOM_TARGET(doc ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
ENDIF(DOXYGEN_FOUND)

ADD_EXECUTABLE(fibo fibo.c)

# Generate manpages from POD header
ADD_MANPAGE_TARGET()
POD2MAN(${CMAKE_CURRENT_SOURCE_DIR}/fibo.c fibo 1)

INSTALL(TARGETS fibo DESTINATION sbin)
